[gd_scene load_steps=17 format=3 uid="uid://d15gss7lwhc2l"]

[ext_resource type="Script" path="res://Control.gd" id="1_lrerl"]
[ext_resource type="AudioStream" uid="uid://rqjxoqys7f04" path="res://HARDSTYLE2.ogg" id="2_0hv81"]
[ext_resource type="Texture2D" uid="uid://c8yklanvuglya" path="res://kynoscarrot.png" id="2_3ndib"]
[ext_resource type="Script" path="res://ColorRect.gd" id="2_45n8i"]
[ext_resource type="Shader" path="res://rain.gdshader" id="2_uddik"]
[ext_resource type="AudioStream" uid="uid://d2txqpr2sscp0" path="res://suffermeme.ogg" id="3_118v4"]
[ext_resource type="AudioStream" uid="uid://bv4au2s3wbp7b" path="res://celebrate.ogg" id="3_mbk6h"]
[ext_resource type="Script" path="res://Kynoscarrot.gd" id="4_g6kr5"]
[ext_resource type="Script" path="res://ColorRect2.gd" id="4_wcwk8"]
[ext_resource type="AudioStream" uid="uid://dgnue215ioi7c" path="res://Carrot/carrot1.ogg" id="6_f5tht"]
[ext_resource type="AudioStream" uid="uid://d0pdxfpix7tuy" path="res://Rain/rain2.ogg" id="6_tbppg"]
[ext_resource type="AudioStream" uid="uid://dy285lrxy8yh7" path="res://Carrot/carrot2.ogg" id="7_t3n8k"]
[ext_resource type="AudioStream" uid="uid://bs03xddmv5tq" path="res://Carrot/carrot3.ogg" id="8_6vf5q"]
[ext_resource type="AudioStream" uid="uid://c6nf77m6x18jv" path="res://Carrot/carrot4.ogg" id="9_nyei6"]

[sub_resource type="Theme" id="Theme_wcuoy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qrgw1"]
shader = ExtResource("2_uddik")
shader_parameter/rain_amount = 200.0
shader_parameter/near_rain_length = 0.2
shader_parameter/far_rain_length = 0.1
shader_parameter/near_rain_width = 0.919
shader_parameter/far_rain_width = 0.278
shader_parameter/near_rain_transparency = 0.312
shader_parameter/far_rain_transparency = 0.5
shader_parameter/rain_color = Color(0.45098, 0.45098, 0.45098, 1)
shader_parameter/base_rain_speed = 0.5
shader_parameter/additional_rain_speed = 0.5
shader_parameter/slant = 0.2

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -2.0
offset_right = 4.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_wcuoy")
script = ExtResource("1_lrerl")

[node name="CheckAuto" type="CheckButton" parent="."]
visible = false
layout_mode = 0
offset_left = 542.0
offset_top = 580.0
offset_right = 586.0
offset_bottom = 604.0

[node name="Timer" type="Timer" parent="CheckAuto"]
wait_time = 0.097

[node name="TimerBoost" type="Timer" parent="CheckAuto"]
wait_time = 15.0

[node name="TimerBoost2" type="Timer" parent="CheckAuto"]
wait_time = 60.0

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 1151.0
offset_bottom = 651.0
script = ExtResource("2_45n8i")

[node name="Label" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 118.0
offset_top = 156.0
offset_right = 1243.0
offset_bottom = 700.0
theme_override_colors/font_color = Color(0.819608, 0.415686, 0.0862745, 1)
theme_override_font_sizes/font_size = 246
text = "CARROT"

[node name="AudioStreamCelebrate" type="AudioStreamPlayer" parent="ColorRect"]
stream = ExtResource("3_mbk6h")

[node name="TimerSwitch" type="Timer" parent="ColorRect"]
wait_time = 15.0

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
material = SubResource("ShaderMaterial_qrgw1")
layout_mode = 0
offset_left = -2.0
offset_top = -2.0
offset_right = 1151.0
offset_bottom = 651.0
script = ExtResource("4_wcwk8")

[node name="AudioStreamSuffer" type="AudioStreamPlayer" parent="ColorRect2"]
stream = ExtResource("3_118v4")

[node name="AudioStreamRain" type="AudioStreamPlayer" parent="ColorRect2"]
stream = ExtResource("6_tbppg")

[node name="TimerWhy" type="Timer" parent="ColorRect2"]
wait_time = 10.297

[node name="Pls" type="Label" parent="ColorRect2/TimerWhy"]
visible = false
offset_left = 226.0
offset_top = 197.0
offset_right = 1048.0
offset_bottom = 465.0
theme_override_font_sizes/font_size = 196
text = "Pls leave"

[node name="CheckBeastMode" type="CheckButton" parent="."]
visible = false
layout_mode = 0
offset_left = 542.0
offset_top = 558.0
offset_right = 586.0
offset_bottom = 582.0
keep_pressed_outside = true

[node name="KynoscarrotClick" type="Sprite2D" parent="."]
visible = false
self_modulate = Color(0.686275, 0.686275, 0.686275, 1)
position = Vector2(587, 370)
rotation = 0.00118532
scale = Vector2(0.948703, 0.992092)
texture = ExtResource("2_3ndib")
script = ExtResource("4_g6kr5")

[node name="carrotShadow" type="Sprite2D" parent="."]
self_modulate = Color(0, 0, 0, 1)
position = Vector2(593, 366)
rotation = 0.00118532
scale = Vector2(1.02793, 1.09025)
texture = ExtResource("2_3ndib")

[node name="Kynoscarrot" type="Sprite2D" parent="."]
position = Vector2(586, 367)
rotation = 0.00118532
scale = Vector2(1.01201, 1.07333)
texture = ExtResource("2_3ndib")
script = ExtResource("4_g6kr5")

[node name="Kynoscarrot2" type="Sprite2D" parent="."]
visible = false
position = Vector2(194, 359)
rotation = 0.00118532
scale = Vector2(1.01201, 1.07333)
texture = ExtResource("2_3ndib")
script = ExtResource("4_g6kr5")

[node name="Kynoscarrot3" type="Sprite2D" parent="."]
visible = false
position = Vector2(922, 373)
rotation = 0.00118532
scale = Vector2(1.01201, 1.07333)
texture = ExtResource("2_3ndib")
script = ExtResource("4_g6kr5")

[node name="Kynoscarrot4" type="Sprite2D" parent="."]
visible = false
position = Vector2(588, 116)
rotation = 0.00118532
scale = Vector2(1.01201, 1.07333)
texture = ExtResource("2_3ndib")
script = ExtResource("4_g6kr5")

[node name="Kynoscarrot5" type="Sprite2D" parent="."]
visible = false
position = Vector2(218, 114)
rotation = 0.00118532
scale = Vector2(1.01201, 1.07333)
texture = ExtResource("2_3ndib")
script = ExtResource("4_g6kr5")

[node name="Kynoscarrot6" type="Sprite2D" parent="."]
visible = false
position = Vector2(952, 123)
rotation = 0.00118532
scale = Vector2(1.01201, 1.07333)
texture = ExtResource("2_3ndib")
script = ExtResource("4_g6kr5")

[node name="Kynoscarrot7" type="Sprite2D" parent="."]
visible = false
position = Vector2(369, 519)
rotation = 0.00118532
scale = Vector2(1.01201, 1.07333)
texture = ExtResource("2_3ndib")
script = ExtResource("4_g6kr5")

[node name="Kynoscarrot8" type="Sprite2D" parent="."]
visible = false
position = Vector2(722, 516)
rotation = 0.00118532
scale = Vector2(1.01201, 1.07333)
texture = ExtResource("2_3ndib")
script = ExtResource("4_g6kr5")

[node name="Score" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -14.5
offset_top = 69.0
offset_right = 14.5
offset_bottom = 139.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
text = "0"

[node name="Click1" type="Button" parent="Score"]
modulate = Color(0.780392, 0.576471, 0.996078, 0)
self_modulate = Color(0, 0, 0, 0.870588)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -69.0
offset_top = 142.0
offset_right = 95.0
offset_bottom = 393.0
grow_horizontal = 2
grow_vertical = 2

[node name="carrot1" type="AudioStreamPlayer" parent="Score/Click1"]
stream = ExtResource("6_f5tht")

[node name="carrot2" type="AudioStreamPlayer" parent="Score/Click1"]
stream = ExtResource("7_t3n8k")

[node name="carrot3" type="AudioStreamPlayer" parent="Score/Click1"]
stream = ExtResource("8_6vf5q")

[node name="carrot4" type="AudioStreamPlayer" parent="Score/Click1"]
stream = ExtResource("9_nyei6")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_0hv81")

[node name="Sound" type="Label" parent="."]
layout_mode = 0
offset_left = 1087.0
offset_top = 4.0
offset_right = 1141.0
offset_bottom = 27.0
text = "Sound "

[node name="soundCheck" type="CheckButton" parent="Sound"]
layout_mode = 0
offset_left = -47.0
offset_right = -3.0
offset_bottom = 24.0
button_pressed = true

[connection signal="toggled" from="CheckAuto" to="." method="_on_check_auto_toggled"]
[connection signal="timeout" from="CheckAuto/Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="CheckAuto/TimerBoost" to="." method="_on_timer_boost_timeout"]
[connection signal="timeout" from="CheckAuto/TimerBoost2" to="." method="_on_timer_boost_2_timeout"]
[connection signal="visibility_changed" from="ColorRect" to="." method="_on_color_rect_visibility_changed"]
[connection signal="visibility_changed" from="ColorRect" to="ColorRect" method="_on_visibility_changed"]
[connection signal="timeout" from="ColorRect/TimerSwitch" to="ColorRect" method="_on_timer_timeout"]
[connection signal="visibility_changed" from="ColorRect2" to="." method="_on_color_rect_visibility_changed"]
[connection signal="visibility_changed" from="ColorRect2" to="ColorRect2" method="_on_visibility_changed"]
[connection signal="timeout" from="ColorRect2/TimerWhy" to="ColorRect2" method="_on_timer_why_timeout"]
[connection signal="toggled" from="CheckBeastMode" to="." method="_on_check_beast_toggled"]
[connection signal="pressed" from="Score/Click1" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Sound/soundCheck" to="." method="_on_check_button_toggled"]
